--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "nervous-sigmoid",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Sigmoid and Sigmoid prime functions",
   "main": "index.js",
   "directories": {
     "test": "test"
   },
+  "registry": "npm",
   "typescript": {
     "definition": "build/definitions/nervous-sigmoid.d.ts"
   },
